--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "dependencies": {
     "n0d3": "0.0.2",
     "n0d3-ping": "0.0.2"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
