--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "lore.js",
   "dependencies": {
     "n0d3": "0.0.3",
-    "n0d3-heroku": "0.0.2"
+    "n0d3-heroku": "0.0.2",
     "n0d3-ping": "0.0.2"
   },
   "engines": {
