--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "n0d3": "0.0.3",
     "n0d3-heroku": "0.0.2",
-    "n0d3-ping": "0.0.2"
-    "n0d3-w2h-monitor": "0.0.1",
+    "n0d3-ping": "0.0.2",
+    "n0d3-w2h-monitor": "0.0.1"
   },
   "engines": {
     "node": "0.8.x",
